--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,15 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Radio+Canada+Big&display=swap');
+
+
 *{
     margin: 0px;
     padding: 0px;
+}
+
+h2{
+    font-family:'Radio Canada Big';
+    font-weight: 700;
+    letter-spacing: 0.1px;
+   
 }
