--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,34 @@
     padding: 0px;
 }
 
+h1{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+    font-size: 40px;
+}
+
 h2{
     font-family:'Radio Canada Big';
     font-weight: 700;
-    letter-spacing: 0.1px;
-   
+    letter-spacing: 1px;
+}
+
+h3{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+}
+
+b{
+    font-family:'Radio Canada Big';
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+p{
+    font-family:'Radio Canada Big';
+
+}
+
+hr{
+    width: 70%;
 }
