--- a/css/styles.css
+++ b/css/styles.css
@@ -9,25 +9,27 @@
 
 h1{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 100;
+    font-weight: 500;
     font-size: 40px;
 }
 
 h2{
     font-family:'Radio Canada Big';
-    font-weight: 700;
+    font-weight: 600;
     letter-spacing: 1px;
+    font-size: 33px;
 }
 
 h3{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
+    font-size: 20px;
 }
 
 b{
     font-family:'Radio Canada Big';
-    font-weight: 700;
-    letter-spacing: 1px;
+    font-weight: 800;
+    letter-spacing: 0px;
 }
 
 p{
@@ -37,4 +39,14 @@ p{
 
 hr{
     width: 70%;
+}
+
+.hero{
+    font-weight: 400;
+    font-size: 25px;
+}
+
+.im{
+    color: grey;
+    letter-spacing: 0px;
 }
