--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ h1{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     font-size: 40px;
+    padding-bottom: 20px;
 }
 
 h2{
@@ -41,12 +42,95 @@ hr{
     width: 70%;
 }
 
-.hero{
+header{
+    height: 120px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.menuboton{
+    
+    padding-right: 15px;
+    padding-top: 1px;
+    width: 340px;
+    display: flex;
+    justify-content: space-between;
+}
+.menu{
+    border: solid 1px;
+    height: 99%;
+    width: 88%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    padding-left: 4px;
+    padding-top: 3px;
+}
+
+
+
+a{
+    font-family:'Radio Canada Big';
+    text-decoration: none;
+    font-weight: 600;
+    color: rgb(54, 54, 54);
+}
+
+main{
+    border: solid 1px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+.heroflex{
+    border: solid 1px;
+    height: 520px;
+    width: 90%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+}
+
+.heroimg{
+    border-radius: 20px;
+    padding-left: 20px;
+}
+
+.hero2t{
     font-weight: 400;
-    font-size: 25px;
+    font-size: 30px;
+    padding-left: 10px;
+    letter-spacing: 0px;
+}
+
+.and{
+    padding: 0px 25px;
+}
+
+.herotext{
+    border: solid 1px;
+    font-weight: 400;
+    font-size: 34px;
+    padding-left: 22px;
 }
 
 .im{
     color: grey;
     letter-spacing: 0px;
+    padding-left: 0px;
 }
+
+.align{
+    display: flex;
+}
+
