--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,6 @@ header{
     justify-content: space-between;
 }
 .menu{
-    border: solid 1px;
     height: 99%;
     width: 88%;
     display: flex;
@@ -82,7 +81,6 @@ a{
 }
 
 main{
-    border: solid 1px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -91,7 +89,6 @@ main{
 }
 
 .heroflex{
-    border: solid 1px;
     height: 520px;
     width: 90%;
     display: flex;
@@ -110,6 +107,7 @@ main{
     font-weight: 400;
     font-size: 30px;
     padding-left: 10px;
+    padding-bottom: 20px;
     letter-spacing: 0px;
 }
 
@@ -118,19 +116,28 @@ main{
 }
 
 .herotext{
-    border: solid 1px;
     font-weight: 400;
     font-size: 34px;
     padding-left: 22px;
 }
 
 .im{
-    color: grey;
+    color:#a2a2a2;
     letter-spacing: 0px;
     padding-left: 0px;
 }
 
 .align{
     display: flex;
+}
+
+button{
+    border: none;
+    font-family:'Radio Canada Big';
+    font-size: 15px;
+    font-weight: 450;
+    padding: 10px 30px;
+    background-color: #c4c4c4;
+    border-radius: 5px;
 }
 
