--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,8 @@ h2{
 
 h3{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
+    font-weight: 600;
+    font-size: 25px;
 }
 
 b{
@@ -35,6 +35,7 @@ b{
 
 p{
     font-family:'Radio Canada Big';
+    font-size: 15px;
 
 }
 
@@ -51,14 +52,6 @@ header{
 
 }
 
-.menuboton{
-    
-    padding-right: 15px;
-    padding-top: 1px;
-    width: 340px;
-    display: flex;
-    justify-content: space-between;
-}
 .menu{
     height: 99%;
     width: 88%;
@@ -71,7 +64,14 @@ header{
     padding-top: 3px;
 }
 
-
+.menuboton{
+    
+    padding-right: 15px;
+    padding-top: 1px;
+    width: 340px;
+    display: flex;
+    justify-content: space-between;
+}
 
 a{
     font-family:'Radio Canada Big';
@@ -103,6 +103,12 @@ main{
     padding-left: 20px;
 }
 
+.herotext{
+    font-weight: 400;
+    font-size: 34px;
+    padding-left: 22px;
+}
+
 .hero2t{
     font-weight: 400;
     font-size: 30px;
@@ -113,12 +119,6 @@ main{
 
 .and{
     padding: 0px 25px;
-}
-
-.herotext{
-    font-weight: 400;
-    font-size: 34px;
-    padding-left: 22px;
 }
 
 .im{
@@ -141,3 +141,25 @@ button{
     border-radius: 5px;
 }
 
+.speciality{
+    width: 90%;
+    padding-left: 33px;
+    border: solid #ff0000;
+    padding-bottom: 120px;
+}
+
+.spboxes{
+    border: solid pink;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.boxes{
+    border: solid blue;
+    width: 270px;
+}
+
+.sptitle{
+    padding-bottom: 30px;
+}
