--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ header{
 }
 
 .menu{
-    height: 99%;
+    height: 70px;
     width: 88%;
     display: flex;
     flex-direction: row;
@@ -62,6 +62,8 @@ header{
     align-content: center;
     padding-left: 4px;
     padding-top: 3px;
+    position: fixed;
+    background-color: white;
 }
 
 .menuboton{
@@ -86,6 +88,7 @@ main{
     display: flex;
     flex-direction:column;
     align-items: center;
+    border: solid blue;
 }
 
 .heroflex{
@@ -144,22 +147,55 @@ button{
 .speciality{
     width: 90%;
     padding-left: 33px;
-    border: solid #ff0000;
     padding-bottom: 120px;
 }
 
-.spboxes{
-    border: solid pink;
+.spcont{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.boxes{
-    border: solid blue;
+.spboxes{
     width: 270px;
 }
 
-.sptitle{
-    padding-bottom: 30px;
+.title{
+    padding: 50px 0px;
+}
+
+.skills{
+    width: 90%;
+    padding-left: 33px;
+    padding-bottom: 120px;
+}
+
+.skillrow1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+}
+
+
+.skillbox{
+    width: 350px;
+    height: 360px;
+    background-color:#a2a2a2;
+    border-radius: 20px;
+}
+
+.skillboxcontent{
+    display: flex;
+    text-align: start;
+    flex-direction: column;
+    padding:0px 30px;
+
+}
+
+.skillsadd{
+    display: flex;
+    flex-direction: row;
+    padding-top: 120px;
 }
