--- a/css/styles.css
+++ b/css/styles.css
@@ -134,14 +134,15 @@ main{
     display: flex;
 }
 
-button{
-    border: none;
+.herobutton{
     font-family:'Radio Canada Big';
     font-size: 15px;
     font-weight: 450;
     padding: 10px 30px;
     background-color: #c4c4c4;
     border-radius: 5px;
+    border: none;
+    cursor: pointer;
 }
 
 .speciality{
@@ -203,6 +204,27 @@ button{
     padding-top: 120px;
 }
 
+.skillsicon{
+    width: 45px;
+    height: 45px;
+    padding-right: 10px;
+}
+
+.skilltitle{
+    display: flex;
+    flex-direction: row;
+    height: 100px;
+    width: 400px;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.addline{
+    display: flex;
+    flex-direction: row;
+    padding-right: 80px;
+}
 .portfolio{
     width: 90%;
     padding-left: 33px;
@@ -226,12 +248,15 @@ button{
 
 .portfoliobutton{
     font-family:"Radio Canada Big";
+    border-radius: 10px;
     font-size: 30px;
     font-weight: 800;
     color: white;
     background-color: #a2a2a2;
     width: 320px;
     height: 70px;
+    border: none;
+    cursor: pointer;
 }
 
 .about{
@@ -251,5 +276,119 @@ button{
 }
 
 .abouttext{
+    font-size: 18px;
+}
+
+footer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.contact{
+    height: 600px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-content: start;
+    padding-right: 10px;
+    padding-left: 33px;
+}
+
+.contactbox{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 10px;
+}
+
+.contactform{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+.contactfin{
+    display: flex;
+    flex-direction: row;
+    padding-top: 30px;
+}
+
+.contacttext{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    height: 100%;
+    justify-content: end;
+
+    
+}
+
+.contactinput{
+    border: none;
+    border-bottom: solid #a2a2a2;
+    font-size: 25px;
+    outline: none;
+    padding-top: 30px;
+}
+.contactbutton{
+    font-family:"Radio Canada Big";
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 800;
+    color: white;
+    background-color: #a2a2a2;
+    width: 150px;
+    height: 40px;
+    margin-right: 10px;
+    cursor: pointer;
+    border: none;
+}
+
+.container-input {
+    text-align: center;
+    width: 50%;
+}
+
+.inputfile {
+    width: 1px;
+    height: 1px;
+    opacity: 0;
+    overflow: hidden;
+    z-index: -1;
     font-size: 20px;
 }
+
+.file-label {
+    display: inline-block;
+    padding: 0px 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: #4b4b4b;
+    cursor: pointer;
+}
+
+.contacticonsbox{
+    display: flex;
+    flex-direction: row;
+    width: 100px;
+    padding-top: 30px;
+    padding-bottom: 15px;
+}
+
+.contacticon{
+    width: 15px;
+    height: 15px;
+    padding-right: 10px;
+}
+
+
+
