--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada+Big&display=swap');
 
+html{
+    scroll-behavior: smooth;
+}
 
 *{
     margin: 0px;
@@ -390,5 +393,23 @@ form{
     padding-right: 10px;
 }
 
+.zoom{
+    display: block;
+    height: auto;
+    transition: transform 0.3s ease;
+}
 
+.zoom:hover{
+    transform: scale(1.2); /* Adjust the scale value as needed */
+    overflow: hidden;
+}
 
+.file-label:hover{
+    color: black;
+    transition: color 0.3s ease;
+}
+
+button:hover{
+    background-color: rgb(56, 56, 56);
+    transition: color 0.5s ease;
+}
