--- a/css/styles.css
+++ b/css/styles.css
@@ -63,14 +63,13 @@ header{
     justify-content: space-between;
     align-items: center;
     align-content: center;
-    padding-left: 4px;
+    margin-left: 4px;
     padding-top: 3px;
     position: fixed;
     background-color: white;
 }
 
-.menuboton{
-    
+.menuboton{ 
     padding-right: 15px;
     padding-top: 1px;
     width: 340px;
@@ -101,24 +100,24 @@ main{
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    padding-right: 10px;
+    margin-right: 10px;
 }
 
 .heroimg{
     border-radius: 20px;
-    padding-left: 20px;
+    margin-left: 20px;
 }
 
 .herotext{
     font-weight: 400;
     font-size: 34px;
-    padding-left: 22px;
+    margin-left: 22px;
 }
 
 .hero2t{
     font-weight: 400;
     font-size: 30px;
-    padding-left: 10px;
+    margin-left: 10px;
     padding-bottom: 20px;
     letter-spacing: 0px;
 }
@@ -133,8 +132,10 @@ main{
     padding-left: 0px;
 }
 
-.align{
+.heroalign{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .herobutton{
@@ -150,7 +151,7 @@ main{
 
 .speciality{
     width: 90%;
-    padding-left: 33px;
+    margin-left: 33px;
     padding-bottom: 120px;
 
 }
@@ -158,12 +159,13 @@ main{
 .spcont{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .spboxes{
     width: 270px;
-    padding-right: 10px;
+    margin-right: 10px;
 }
 
 .title{
@@ -172,15 +174,17 @@ main{
 
 .skills{
     width: 90%;
-    padding-left: 33px;
+    margin-left: 33px;
     padding-bottom: 120px;
 }
 
 .skillrow1{
     display: flex;
     flex-direction: row;
+    row-gap: 50px;
+    flex-wrap: wrap;
     justify-content: space-between;
-    padding-right: 30px;
+    margin-right: 30px;
     display: flex;
     flex-direction: row;
 }
@@ -203,6 +207,7 @@ main{
 
 .skillsadd{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     padding-top: 120px;
 }
@@ -217,7 +222,7 @@ main{
     display: flex;
     flex-direction: row;
     height: 100px;
-    width: 400px;
+    width: 300px;
     align-items: center;
     padding-top: 20px;
     padding-bottom: 10px;
@@ -225,12 +230,14 @@ main{
 
 .addline{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     padding-right: 80px;
 }
+
 .portfolio{
     width: 90%;
-    padding-left: 33px;
+    margin-left: 33px;
     padding-bottom: 120px;
     text-align: center;
 }
@@ -238,9 +245,11 @@ main{
 .portfoliorow{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 50px;
     justify-content: space-between;
     padding-bottom: 40px;
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .portfolioimg{
@@ -264,18 +273,18 @@ main{
 
 .about{
     width: 90%;
-    padding-left: 33px;
+    margin-left: 33px;
     padding-bottom: 120px;
 }
 
 .aboutbox1{
-    padding: 0px 90px;
+   margin: 0px 90px;
 }
 .aboutbox2{
     display: flex;
     flex-direction: row-reverse;
-    padding-right: 30px;
-    padding-left: 80px;
+    margin-right: 30px;
+    margin-left: 82px;
 }
 
 .abouttext{
@@ -288,7 +297,6 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .contact{
@@ -297,15 +305,15 @@ footer{
     display: flex;
     flex-direction: column;
     align-content: start;
-    padding-right: 10px;
-    padding-left: 33px;
+    margin-right: 10px;
+    margin-left: 33px;
 }
 
 .contactbox{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-right: 10px;
+    margin-right: 10px;
 }
 
 .contactform{
@@ -329,9 +337,7 @@ form{
     flex-direction: column;
     width: 40%;
     height: 100%;
-    justify-content: end;
-
-    
+    justify-content: end;   
 }
 
 .contactinput{
@@ -371,7 +377,7 @@ form{
 
 .file-label {
     display: inline-block;
-    padding: 0px 20px;
+    margin: 0px 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
     font-weight: bold;
@@ -390,7 +396,7 @@ form{
 .contacticon{
     width: 15px;
     height: 15px;
-    padding-right: 10px;
+    margin-right: 10px;
 }
 
 .zoom{
@@ -410,6 +416,11 @@ form{
 }
 
 button:hover{
-    background-color: rgb(56, 56, 56);
-    transition: color 0.5s ease;
+    background-color: rgb(197, 197, 197);
+    transition: background-color 0.5s ease;
+}
+
+.herobutton:hover{
+    background-color: #9c9c9c;
+    transition: background-color 0.5s ease;
 }
